ndb - bug#21363   Add extra sleeps (conditionally) if user-ndb-object still exists during shutdown   Note: This is not in anyway optimal, but i dont't really know in which order should be shutdown         but it fixes problem...