storage/ndb/include/ndbapi/ndb_cluster_connection.hpp
@@ -114,6 +114,7 @@ public:
 
   void init_get_next_node(Ndb_cluster_connection_node_iter &iter);
   unsigned int get_next_node(Ndb_cluster_connection_node_iter &iter);
+  unsigned get_active_ndb_objects() const;
 #endif
 
 private:
